cloud-resources/k8s/resources/deployments/redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-redis
  labels:
    k8s-app: my-redis
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: mysql-redis
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - name: redis
        image: docker.io/redis
        ports:
        - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
  labels:
    k8s-app: database-redis
spec:
  ports:
  - port: 6379
    name: redis
    targetPort: 6379
  selector:
    k8s-app: my-redis
