cloud-resources/k8s/resources/deployments/coder-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8sApp: coder-web
  name: coder-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8sApp: coder-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8sApp: coder-web
      name: coder-web
    spec:
      containers:
        - args: null
          image: 'coder-web:2.2.2'
          imagePullPolicy: IfNotPresent
          name: default-app
          ports:
            - containerPort: 8080
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: coder-web
  namespace: default
  labels:
    k8sApp: coder-web
spec:
  selector:
    k8sApp: coder-web
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coder-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: m.zhangyongqiao.com
      http:
        paths:
          - path: /coder/?(.*)
            backend:
              serviceName: coder-web
              servicePort: 8080
